--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,8 @@ body{
 }
 
 .main-container .todo-list{
-
+    max-height: 250px;
+    overflow-y: auto;
 }
 
 .todo-list li{
@@ -76,14 +77,52 @@ body{
     background: #f2f2f2;
     margin-bottom: 8px;
     padding: 0 15px;
+    cursor: default;
+    overflow: hidden;
 }
 
 .todo-list li span{
     position: absolute;
-    right: 0;
+    right: -45px;
     color: #fff;
     width: 45px;
     text-align: center;
     border-radius: 0 3px 3px 0;
     background-color: red;
+    cursor: pointer;
+
+    transition: right 200ms ease-in;
+}
+
+.todo-list li:hover span{
+    right: 0px;
+}
+
+.main-container .footer{
+    display: flex;
+    width: 100%;
+    margin-top: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer button{
+    border: none;
+    outline: none;
+    background: #8e49e8;
+
+    border-radius: 3px;
+    padding: 6px 10px;
+
+    font-size: 16px;
+    cursor: pointer;
+    color: #fff;
+
+    transition: all .2s ease-in-out;
+}
+
+.footer button:hover,
+.footer button:focus{
+    background: #f2f2f2;
+    color: #8e49e8;
 }
