--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ body{
     width: 100%;
     
     background: linear-gradient(#68EACC 0%, #497BE8 100%);
+    display: flex;
+    place-items: center;
 }
 
 .main-container{
@@ -127,6 +129,13 @@ body{
     color: #fff;
 
     transition: all .2s ease-in-out;
+    opacity: 0.6;
+    pointer-events: none;
+}
+
+.footer button.active{
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .footer button:hover,
